--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     <nav class="main-nav">
       <a href="index.html">Home</a>
       <a href="models.html">Models</a>
-      <a href="#drawbacks">Drawbacks</a>
-      <a href="#contact">Contact</a>
-      <a href="#about">About</a>
+      <a href="drawbacks.html">Drawbacks</a>
     </nav>
   </header>
 
   <!-- Landing Section -->
   <section class="landing">
     <div class="landing-text">
-      <h2>Mercedes is a German automotive brand known for its luxury, innovation, and high performance.</h2>
+      <h2>Mercedes is the epitome of German engineering, combining precision, luxury, and innovation.
+Each vehicle delivers exceptional performance while maintaining the highest standards of comfort and style.
+From sleek sedans to powerful SUVs, Mercedes sets the benchmark for automotive excellence.</h2>
     </div>
     <div class="landing-image">
       <img src="images/mercedes-hero.jpg" alt="Mercedes Car">
@@ -55,33 +55,20 @@
     </div>
   </section>
 
-  <!-- Drawbacks Section -->
-  <section id="drawbacks">
-    <h2>Drawbacks</h2>
-    <p>Some Mercedes models may have high maintenance costs and expensive spare parts. Customers should consider this before purchasing.</p>
-  </section>
-
-
-
   <!-- Footer -->
-<footer class="site-footer">
-  <div class="footer-content">
-    <div class="contact-about">
-      <h3>Contact</h3>
-      <p>Email: moosa@example.com</p>
-      <p>Phone: +358 123 456 789</p>
-
-      <h3>About</h3>
-      <p>This website helps car enthusiasts and buyers explore Mercedes-Benz models, features, colors, and specifications.</p>
+  <footer class="site-footer">
+    <p>© 2025 Mercedes Benz Explorer | Designed by Moosa Khan</p>
+    <div class="footer-extra">
+      <div class="footer-section">
+        <h3>Contact</h3>
+        <p>Email: moosa@example.com</p>
+        <p>Phone: +358 123 456 789</p>
+      </div>
+      <div class="footer-section">
+        <h3>About</h3>
+        <p>This website is designed to help car enthusiasts and buyers explore Mercedes-Benz models, features, colors, and specifications.</p>
+      </div>
     </div>
-
-    <div class="footer-bottom">
-      <p>© 2025 Mercedes Benz Explorer | Designed by Moosa Khan</p>
-    </div>
-  </div>
-</footer>
-
-
-  <script src="scripts/script.js"></script>
+  </footer>
 </body>
 </html>
